INTEGRATION: CWS qadev20 (1.3.90); FILE MERGED 2004/11/26 14:22:05 sg 1.3.90.1: #i37178#CHG: removed Java 1.3 incompatibilities