@@ -2,9 +2,9 @@
  *
  *  $RCSfile: ValueChanger.java,v $
  *
- *  $Revision: 1.3 $
+ *  $Revision: 1.4 $
  *
- *  last change:$Date: 2003-11-18 16:17:43 $
+ *  last change:$Date: 2004-12-10 17:01:46 $
  *
  *  The Contents of this file are made available subject to the terms of
  *  either of the following licenses
@@ -95,7 +95,7 @@ public class ValueChanger {
 
    if (oldValue instanceof Boolean) {
      boolean oldbool = ((Boolean) oldValue).booleanValue();
-     newValue = Boolean.valueOf(!oldbool);
+     newValue = new Boolean(!oldbool);
    } else
 
    if (oldValue instanceof Integer) {
